--- a/app/assets/stylesheets/business_logs.scss
+++ b/app/assets/stylesheets/business_logs.scss
@@ -70,3 +70,190 @@
 .log{
 	font-size: 14pt
 }
+
+.log_day{
+	width: 400px;
+	font-size: 16px;
+}
+
+.businesslog_copy_all{
+	width: 750px;
+	height: auto;
+}
+
+.businesslog_copy{
+	position: relative;
+	text-align: center;
+	font-size: 20px;
+}
+
+.h1_businesslog_copy{
+	margin-left: 380px;
+	position: relative;
+	right: 80px;
+}
+
+.client_name_place{
+	margin-left: 380px;
+	position: relative;
+	right: 80px;
+	font-size: 20px;
+	text-decoration : underline;
+}
+
+.businesslog-copy-table{
+	width: 1100px;
+	position: relative;
+	margin-top: 30px;
+	font-size: 18px;
+}
+
+.recording_sign{
+	text-align: center;
+	width: 380px;
+	white-space: nowrap;
+}
+
+.log_farewell_select{
+	text-align: center;
+	width: 300px;
+	height: 30px;
+	margin-left: 10px;
+	padding-right: 10px;
+}
+
+.log_both_select{
+	text-align: center;
+	width: 300px;
+	height: auto;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.log_both{
+	text-align: center;
+	width: 400px;
+	height: auto;
+	margin-left: 50px;
+}
+
+.log_bath_down_select{
+	position: relative;
+	margin-right: 265px;
+}
+
+.log_food_select{
+	text-align: center;
+	width: 200px;
+	height: auto;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.log_food_font{
+	text-align: center;
+	width: 100px;
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.log_good_staple_dosage_select{
+	text-align: center;
+	width: 450px;
+	margin-left: 15px;
+	margin-right: 15px;
+}
+
+.blank_space{
+	width: 50px;
+	height: auto;
+	padding-right: 10px;
+	padding-left: 10px;
+}
+
+.log_font_size{
+	font-size: 22px;
+}
+
+.log_check_log_hand_washing{
+	text-align: center;
+	position: relative;
+	right: 210px;
+}
+
+.food_affter_brush{
+	margin-left: 160px;
+}
+
+
+.vital_press{
+	width: 300px;
+	text-align: center;
+}
+
+.body_temperature{
+	width: 150px;
+	text-align: center;
+}
+
+.special_report_title{
+	margin-bottom: 1px;
+	position: relative;
+	top: 0px;
+}
+
+.special_report{
+	height: auto;
+	width: 900px;
+	padding-left: 10px;
+}
+
+.report{
+	width: 900px;
+	word-wrap: break-word;
+}
+
+.log_pressure{
+	width: 200px;
+	height: 100px;
+	padding-right: 20px;
+	padding-right: 20px;
+	text-align: center;
+}
+
+.re_check{
+	width: 200px;
+	text-align: center;
+}
+
+.log_pulse{
+	width: 200px;
+	text-align: center;
+}
+
+.re_log_press{
+	width: 500px;
+	padding-right: 10px;
+	padding-left: 10px;
+	text-align: center;
+}
+
+.re_log_body_temperature{
+	width: 100px;
+	padding-left: 10px;
+	padding-right: 10px;
+	text-align: center;
+}
+
+.re_log_pulse{
+	width: 100px;
+	padding-right: 10px;
+	padding-left: 10px;
+	text-align: center;
+}
+
+.pagenate_log{
+	position: relative;
+	left: 360px;
+	width: 300px;
+}
