--- a/app/views/shifts/staff_sfift.html.erb
+++ b/app/views/shifts/staff_sfift.html.erb
@@ -1,33 +1,74 @@
-<h1>OOの里 デイサービス 勤務表
-<% today = Date.today%>
-<br><%= today.strftime('%Y年%m月')%></h1>
-<% month = today.strftime('%m')%>
-<table align="center" cellspacing="5", cellpadding="5">
-	<thead>
-		<tr>
-			<% [*@first_day..@last_day].each do |day| %>
-				<th></th>
-				<th></th>
-				<th><font size="5"><%= day.strftime("%d") %></font></th>
-			<% end %>
-		</tr>
-		<tr>
-			<% [*@first_day..@last_day].each do |day| %>
-				<th></th>
-				<th></th>
-				<th><font size= "5"><%= $days_of_the_week[day.wday] %></font></th>
-			<% end %>
-		</tr>
-	</thead>
-	<tbody>
-		<% @staffs.each do |staff| %>
+<div class= "shiht_all_staff">
+	<div class= "shiht_all_staff_month_select">
+		<%= link_to "⇦ ", shifts_staff_sfift_path(date: @first_day.prev_month), class: "btn btn-info" %>
+				【<%= l(@first_day, format: :middle) %>】シフト表
+		<%= link_to " ⇨", shifts_staff_sfift_path(date: @first_day.next_month), class: "btn btn-info" %> 
+		<h1>OOの里 デイサービス 勤務表</h1>
+	</div>
+	<table class="table-border-dark table-condensed table-hover shifts-table">
+		<thead>
 			<tr>
 				<th></th>
-				<td><font size= "5"><%= staff.name %></font></td>
-			<% @shifts.each do |shift| %>
-				<td></td>
-			<% end %>
+				<% [*@first_day..@last_day].each do |day| %>
+					<th class="shift_day"><%= day.strftime("%d") %></th>
+				<% end %>
+				<th class="shift_all_count">aaa</th>
+				<th class="shift_all_count">bbb</th>
 			</tr>
-		<% end %>	
-	</tbody>
-</table>
+			<tr>
+				<th></th>
+				<% [*@first_day..@last_day].each do |day| %>
+					<th class="shift_day"><%= $days_of_the_week[day.wday] %></th>
+				<% end %>
+					<th class="shift_all_count">ccc</th>
+					<th class="shift_all_count">ddd</th>
+			</tr>
+			<tr>
+				<th></th>
+				<% [*@first_day..@last_day].each do |day| %>
+					<th class="shift_day"></th>
+				<% end %>
+				<th class="shift_all_count">e</th>
+				<th class="shift_all_count">f</th>
+			</tr>
+		</thead>
+		<tbody>
+			<% @staffs.each do |staff| %>
+				<tr>
+					<th class="shift_day"><%= staff.name %></th>
+					<% [*@first_day..@last_day].each do |day| %>
+						<td class="shift_day"></td>
+					<% end %>	
+					<th class="shift_all_count"></th>
+					<th class="shift_all_count"></th>
+				</tr>
+			<% end %>
+			<tr>
+				<th class="shift_all_count"></th>
+				<th class="shift_all_count"></th>
+				<th class="shift_all_count"></th>
+				<% [*@first_day..@last_day].each do |day| %>
+						<th class="shift_all_count"></th>
+				<% end %>
+			</tr>	
+				<% @staffs.each do |staff| %>
+				<tr>
+					<th class="shift_day"><%= staff.name %></th>
+					<% [*@first_day..@last_day].each do |day| %>
+						<td class="shift_day"></td>
+					<% end %>	
+					<th class="shift_all_count"></th>
+					<th class="shift_all_count"></th>
+				</tr>
+			<% end %>
+			<tr>
+				<th class="shift_all_count"></th>
+				<th class="shift_all_count"></th>
+				<th class="shift_all_count"></th>
+				<% [*@first_day..@last_day].each do |day| %>
+						<th class="shift_all_count"></th>
+				<% end %>
+			</tr>	
+		</tbody>
+	</table>
+</div>
