--- a/app/assets/stylesheets/shifts.scss
+++ b/app/assets/stylesheets/shifts.scss
@@ -2,20 +2,48 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.shiht_all_staff{
+  position: relative;
+  left: 50px;
+  padding-right: 100px;
+  padding-left: 5px;
+  margin-top: 50px;
+  text-align: center;
+}
+
+.shiht_all_staff_month_select{
+  position: relative;
+  right: 50px;
+}
+
+.shiht_all{
+  padding-right: 5px;
+  padding-left: 5px;
+  margin-top: 50px;
+  text-align: center;
+}
+
 .shifts-table{
-    th {
-        vertical-align: middle;
-        text-align: center;
-        width: 200%;
-      }
-      td {
-        vertical-align: middle;
-        text-align: center;
-        width: 200%;
-      }
+  position: relative;
+  right: 80px;
+  width: 1150px;
+  text-align: center;
 }
 
-.staff_name{
-
-  width: 1%
+.shift_day{
+  width: 220px;
+  height: 30px;
 }
+
+.shift_all_count{
+  width: 370px;
+  height: 30px;
+}
+
+.form-shift{
+  width: 50px;
+  height: 30px;
+  text-align: right;
+  font-size: 13px;
+}
+
